# mic-py

./: .gitignore  README.md  main.py  pyproject.toml
mic/: record.py  transcribe.py
tests/: test_websocket.py
