[tool.poetry]
name = "mic-py"
version = "0.0.1"
description = ""
authors = ["hid3xxx"]
readme = "README.md"
packages = [{include = "mic_py"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
pyaudio = "^0.2.13"
webrtcvad = "^2.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
