[tool.poetry]
name = "mic-py"
version = "0.1.0"
description = ""
license = ""
authors = ["hid3xxx"]
readme = "README.md"
repository = "https://github.com/hid3xxx/mic-py"
packages = [{ include = "mic_py" }]

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.13"
webrtcvad = "^2.0.10"
faster-whisper = "^0.5.1"
websockets = "^11.0.2"
setuptools = "^67.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
